tests/miniJava/pos/000759_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { if ( new java ( ) ) { } else java = 0 ; } }
