tests/miniJava/neg/004369_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public new java ( ) { return 0 ; } }
